# PTracer

./: .gitignore  CMakeLists.txt
ecs/: CMakeLists.txt  component_array.h  component_manager.h  director.h  entity.cpp  entity.h  entity_manager.h  system.h  system_manager.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: box.h  camera.h  draw_manager.h  image.h  intersections.h  light.h  light_system.h  linmath.h  matrix2.h  matrix3.h  matrix4.h  plane.h  point_light.h  randomizer.h  ray.h  shape.h  sphere.h  timing.h  transformation.h  triangle.h  utils.h  vector2.h  vector3.h  vector4.h
libs/: glfw3.lib
src/: draw_manager.cpp  light_system.cpp  main.cpp
systems/: light_system.h
